Removing unneeded stuff. Fixing pages

--- a/config.toml
+++ b/config.toml
@@ -5,5 +5,5 @@ title = "Coding e Paduli"
 theme = "ananke"
 
 [params]
-  author = "Seth Kenlon"
-  description = "My hugo demo"
+  author = "codingepaduli"
+  description = "Ennesimo sito/blog di programmazione ed informatica in generale"
