--- a/config.toml
+++ b/config.toml
@@ -12,8 +12,4 @@ theme = "mainroad"
   toc = true # Enable Table of Contents
   post_meta = ["date", "categories", "translations"] # Order of post meta information
 
-[[menu.main]]
-  identifier = "home"
-  name   = "Home"
-  url    = "/"
-  weight = 0
+# [[menu.main]] not needed, use "menu" in content/_index.html
