Fixed Hugo 0.60.0 Raw HTML omitted Issue

--- a/config.toml
+++ b/config.toml
@@ -11,5 +11,13 @@ theme = "mainroad"
   description = "Ennesimo sito/blog di programmazione ed informatica in generale"
   toc = true # Enable Table of Contents
   post_meta = ["date", "categories", "translations"] # Order of post meta information
+  mainSections = ["posts"]
 
 # [[menu.main]] not needed, use "menu" in content/_index.html
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      hardWraps = false
+      unsafe = true
+      xHTML = false
