Added categories to home page

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ theme = "mainroad"
   description = "Ennesimo sito/blog di programmazione ed informatica in generale"
   toc = true # Enable Table of Contents
   post_meta = ["date", "categories", "translations"] # Order of post meta information
-  mainSections = ["posts"]
+  mainSections = ["posts", "openSource"]
 
 # [[menu.main]] not needed, use "menu" in content/_index.html
 
