--- a/.editorconfig
+++ b/.editorconfig
@@ -3,13 +3,14 @@ root = true
 
 [*]
 charset = utf-8
-indent_style = tab
+indent_style = space
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.html]
 insert_final_newline = false
+indent_size = 4
 
 [*.md]
 trim_trailing_whitespace = false
