--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,7 +5,6 @@ paginate = "10"
 
 theme = "mainroad" # hugo-academic mainroad watercss
 
-
 [params]
   author = "codingepaduli"
   subtitle = "Ennesimo sito/blog di programmazione ed informatica in generale"
@@ -24,6 +23,11 @@ theme = "mainroad" # hugo-academic mainroad watercss
 [mediaTypes]
   [mediaTypes."text/html"]
     suffixes = ["htm", "html", "HTM", "HTML"]
+  [mediaTypes."application/json"]
+    suffixes = ["json"]
+
+[outputs]
+  page = ["HTML"] # ADD "JSON" type to generate json files
 
 [markup]
   [markup.tableOfContents]
@@ -39,3 +43,4 @@ theme = "mainroad" # hugo-academic mainroad watercss
       codeFences = true
       guessSyntax = true
       tabWidth = 4
+
