Updated configuration file for enabling syntax highlight

--- a/config/mainroad/config.toml
+++ b/config/mainroad/config.toml
@@ -10,6 +10,6 @@ layoutDir = "layouts/mainroad"
 [markup]
   [markup.goldmark]
     [markup.highlight]
-      codeFences = false
+      codeFences = true
       guessSyntax = false
       tabWidth = 4
