--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,22 +1,24 @@
-name: Check Markdown 
+name: Check Markdown
 
-on: 
+on:
   push:
     branches:
     - master
   schedule:
-  # Run everyday at 10:00 AM 
+  # Run everyday at 10:00 AM
   - cron: "0 10 * * *"
-  
+
 jobs:
   markdown-link-check:
     runs-on: ubuntu-latest
     steps:
     - name: Check out code
       uses: actions/checkout@master
-    - name: Run mdl
+    - name: Run markdownlint
       uses: actionshub/markdownlint@master
-    - name: markdownlint-cli
+    - name: Run markdownlint-cli
       uses: nosborn/github-action-markdown-cli@v1.1.1
-        with:
-          files: .
+      with:
+        files: .
+    - name: markdown-link-check
+      uses: gaurav-nelson/github-action-markdown-link-check@v1
