--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -2,10 +2,7 @@
 # See: https://github.com/github/super-linter/blob/master/docs/disabling-linters.md#markdown
 # See: https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md
 ---
-MD013:        # line-length
-  code_blocks: false
-  tables: false
-  headings: false
+MD013: false  # line-length
 MD014: false  # commands-show-output
 MD022:        # blanks-around-headings
   lines_above: 1
