--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -6,19 +6,19 @@ MD013: false  # line-length
 MD014: false  # commands-show-output
 MD022:        # blanks-around-headings
   lines_above: 1
-  lines_below: 0
+  lines_below: 1
 MD024:        # no-duplicate-heading
   siblings_only: true
 MD025:        # single-title/single-h1
   front_matter_title: ""
-MD026:        # no-trailing-punctuation
-  punctuation: ".,;:!。，；:"
+MD026: true   # no-trailing-punctuation
 MD033: false  # no-inline-html
 MD036: false  # no-emphasis-as-heading
 MD044:        # proper-names
   names:
     - JavaScript
   code_blocks: false
-MD046: false  # code-block-style
+MD046:        # code-block-style
+  style: fenced
 MD048:        # code-fence-style
   style: backtick
