--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,3 +22,4 @@ jobs:
       with:
         files: .
         config_file: ".markdownlint.yml"
+        ignore_files: "./publish/*, "./content/interesting/*"
