Updated configuration file for GitHub Actions

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,4 +22,4 @@ jobs:
       with:
         files: .
         config_file: ".markdownlint.yml"
-        ignore_files: "content/interesting, publish"
+        ignore_files: "'content/interesting/** publish/**'"
