--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,8 +8,8 @@ on:
     branches:
     - master
   schedule:
-  # Run everyday at 10:00 AM
-  - cron: "0 10 * * *"
+  # Run everyday at 4:00 AM
+  - cron: "0 4 * * *"
 
 jobs:
   markdown-check:
@@ -25,3 +25,5 @@ jobs:
         # ignore_files: "content/interesting"
     - name: Run markdown-link-check
       uses: ruzickap/action-my-markdown-link-checker@v1
+      with:
+        exclude: '/content/coding/java'
