--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,4 +26,5 @@ jobs:
     - name: Run markdown-link-check
       uses: ruzickap/action-my-markdown-link-checker@v1
       with:
+        config_file: '.github/link_checker_config.json'
         exclude: '/content/coding/java'
