Updated configuration file of GitHub Action - updated configuration of markdown-link-checker tool

--- a/.github/link_checker_config.json
+++ b/.github/link_checker_config.json
@@ -1,4 +1,15 @@
 {
+  "ignorePatterns": [
+    {
+      "pattern": "^http(s)?://browsershots.org"
+    },
+    {
+      "pattern": "^http(s)?://cdnjs.cloudflare.com"
+    },
+    {
+      "pattern": "^http(s)?://www2.mokabyte.it"
+    }
+  ]
   "replacementPatterns": [
     {
       "pattern": "^/",
