Updated configuration file of GitHub Action - updated configuration of markdown-link-checker tool

--- a/.github/link_checker_config.json
+++ b/.github/link_checker_config.json
@@ -7,6 +7,9 @@
       "pattern": "^http(s)?://cdnjs.cloudflare.com"
     },
     {
+      "pattern": "^http(s)?://www.cloudflare.com/"
+    },
+    {
       "pattern": "^http(s)?://www2.mokabyte.it"
     }
   ],
