Updated configuration file of GitHub Action - updated configuration of markdown-link-checker tool

--- a/.github/link_checker_config.json
+++ b/.github/link_checker_config.json
@@ -11,7 +11,10 @@
     },
     {
       "pattern": "^http(s)?://www2.mokabyte.it"
-    }
+    },
+    {
+      "pattern": "^http(s)?://savoir-sans-frontieres.com"
+    },
   ],
   "replacementPatterns": [
     {
