Updated configuration file for enabling pager (previous/next article) and adding article references

--- a/config/mainroad/config.toml
+++ b/config/mainroad/config.toml
@@ -1,9 +1,13 @@
 theme = "mainroad" # hugo-academic mainroad watercss
+languageCode = "it-IT"
 
 publishDir = "public"
 layoutDir = "layouts/mainroad"
 
 customCSS = ["/static/css/customImages.css"]
+
+[Params]
+  pager = true # Show pager navigation (prev/next links) at the bottom of pages if true
 
 [mediaTypes]
   [mediaTypes."text/html"]
