--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,12 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_size = 2
 
-[*.{json,yaml,yml,toml,md,babelrc,eslintrc,stylelintrc}]
+[*.{json,yaml,yml,toml,babelrc,eslintrc,stylelintrc}]
 indent_style = space
 indent_size = 2
+
+## Markdown with 4 spaces because sublist has this bug with github and pandoc:
+## https://github.com/jgm/pandoc/issues/2575
+[*.md] 
+indent_size = 4
+
