--- a/.github/workflows/editorconfig-lint-action.yml
+++ b/.github/workflows/editorconfig-lint-action.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Check out code
       uses: actions/checkout@master
     - name: Run EditorConfig Lint
-      - uses: snow-actions/eclint@v1.0.1
-        with:
-          args: 'check'
+      uses: snow-actions/eclint@v1.0.1
+      with:
+        args: 'check'
