--- a/config/mainroad/config.toml
+++ b/config/mainroad/config.toml
@@ -8,6 +8,7 @@ customCSS = ["/static/css/customImages.css"]
 
 [Params]
   pager = true # Show pager navigation (prev/next links) at the bottom of pages if true
+  dateformat = "02-01-2006" # Change the format of dates to day-month-year
 
 [mediaTypes]
   [mediaTypes."text/html"]
