Updated Hugo configuration file for enabling social widgets

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -36,5 +36,5 @@ theme = "mainroad" # hugo-academic mainroad watercss
       xHTML = false
     [markup.highlight]
       codeFences = true
-      guessSyntax = true
+      guessSyntax = false
       tabWidth = 4
