Updated Hugo configuration file for updating Hugo's language variable

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 baseURL = "http://codingepaduli.github.io/"
-languageCode = "it"
+defaultContentLanguage = "it"
 title = "Coding e Paduli"
 paginate = "20"
 
