--- a/.github/workflows/editorconfig-lint-action.yml
+++ b/.github/workflows/editorconfig-lint-action.yml
@@ -2,11 +2,9 @@ name: Validate against EditorConfig
 
 on:
   push:
-    branches:
-    - master
+    branches: [main, master]
   pull_request:
-    branches:
-    - master
+    branches: [main, master]
   schedule:
   # Run everyday at 4:00 AM
   - cron: "0 5 * * *"
