--- a/.github/workflows/markdown-link-check-action.yml
+++ b/.github/workflows/markdown-link-check-action.yml
@@ -2,11 +2,9 @@ name: Check Links
 
 on:
   push:
-    branches:
-    - master
+    branches: [main, master]
   pull_request:
-    branches:
-    - master
+    branches: [main, master]
   schedule:
   # Run everyday at 4:30 AM
   - cron: "30 4 * * *"
@@ -14,6 +12,8 @@ on:
 jobs:
   markdown-link-check:
     runs-on: ubuntu-latest
+    # Run only when you commit a message with the word '#links'
+    if: ${{ contains(github.event.head_commit.message, '#links') }}
     steps:
     - name: Check out code
       uses: actions/checkout@master
