--- a/.github/workflows/markdown-lint-cli-action.yml
+++ b/.github/workflows/markdown-lint-cli-action.yml
@@ -2,11 +2,9 @@ name: Check Markdown
 
 on:
   push:
-    branches:
-    - master
+    branches: [main, master]
   pull_request:
-    branches:
-    - master
+    branches: [main, master]
   schedule:
   # Run everyday at 4:00 AM
   - cron: "0 4 * * *"
