--- a/.github/workflows/eslint-action.yml
+++ b/.github/workflows/eslint-action.yml
@@ -15,7 +15,15 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@v2
-    - name: Installing yarn
-      run: yarn
+    - name: Installing node
+      uses: actions/setup-node@v2
+        with:
+          node-version: 16
+    - name: Running CI
+      run: npm ci # or yarn install
     - name: Running ESLint
-      run: eslint . --ext .js,.jsx,.ts,.tsx
+      uses: sibiraj-s/action-eslint@v2
+        with:
+          eslint-args: '--ignore-path=.gitignore --quiet'
+          extensions: 'js,jsx,ts,tsx'
+          annotations: true
