Updated configuration file of GitHub Action - Run ESLint to ckeck javascript files

--- a/.github/workflows/eslint-action.yml
+++ b/.github/workflows/eslint-action.yml
@@ -24,6 +24,6 @@ jobs:
     - name: Running ESLint
       uses: sibiraj-s/action-eslint@v2
         with:
-          eslint-args: '--ignore-path=.gitignore --quiet'
+          eslint-args: ' '
           extensions: 'js,jsx,ts,tsx'
           annotations: true
