--- a/.github/.eslintrc.yml
+++ b/.github/.eslintrc.yml
@@ -6,11 +6,15 @@ env:
   browser: true
   commonjs: true
   es6: true
-extends: 'eslint:recommended'
+  p5js/p5: true
+extends:
+  - 'eslint:recommended'
+  - 'plugin:p5js/p5'
 parserOptions:
   sourceType: module
 # TODO : End-of-Life for Built-in JSDoc Support in ESLint https://eslint.org/blog/2018/11/jsdoc-end-of-life. Use eslint-plugin-jsdoc plugin instead: https://github.com/gajus/eslint-plugin-jsdoc
-#plugins:
+plugins:
+  - p5js
 #  - require-jsdoc
 rules:
   indent:
