--- a/.github/.eslintrc.yml
+++ b/.github/.eslintrc.yml
@@ -14,7 +14,7 @@ extends:
 parserOptions:
   sourceType: module
 # TODO : End-of-Life for Built-in JSDoc Support in ESLint https://eslint.org/blog/2018/11/jsdoc-end-of-life. Use eslint-plugin-jsdoc plugin instead: https://github.com/gajus/eslint-plugin-jsdoc
-plugins:
+# plugins:
 #  - p5js
 #  - require-jsdoc
 rules:
