Updated configuration file of GitHub Action - Run ESLint to ckeck javascript files

--- a/.github/workflows/eslint-action.yml
+++ b/.github/workflows/eslint-action.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         node-version: 16
     - name: Install ESLint
-      run: npm install --save-dev eslint eslint-plugin-jsdoc eslint-config-p5js
+      run: sudo npm install -g eslint
     - name: Initialization
       run: npm init
     - name: Running ESLint
