--- a/.github/.eslintrc.yml
+++ b/.github/.eslintrc.yml
@@ -9,12 +9,12 @@ env:
 #  p5js/p5: true
 extends:
   - 'eslint:recommended'
-  - 'plugin:jsdoc/recommended'
+#  - 'plugin:jsdoc/recommended'
 parserOptions:
   sourceType: module
 # TODO : End-of-Life for Built-in JSDoc Support in ESLint https://eslint.org/blog/2018/11/jsdoc-end-of-life. Use eslint-plugin-jsdoc plugin instead: https://github.com/gajus/eslint-plugin-jsdoc
-plugins:
-  - jsdoc
+# plugins:
+#  - jsdoc
 #  - p5js
 #  - require-jsdoc
 rules:
