--- a/.github/workflows/eslint-action.yml
+++ b/.github/workflows/eslint-action.yml
@@ -22,9 +22,9 @@ jobs:
     - name: Creating the NPM project
       run: npm init --yes # (info extracted from current dir)
     - name: Install ESLint (and plugins) as project dependency
-      run: npm install eslint eslint-plugin-p5js
+      run: npm install --save-dev eslint eslint-plugin-p5js
 #    - name: Install ESLint
 #      run: sudo npm install -g eslint
     - name: Running ESLint
-      run: eslint . --config .github/.eslintrc.yml --ext .js
+      run: npm run eslint . --config .github/.eslintrc.yml --ext .js
       # --output-file style\wrongstyle.html --format html
