Updated configuration file of GitHub Action - Run ESLint to ckeck javascript files

--- a/.github/workflows/eslint-action.yml
+++ b/.github/workflows/eslint-action.yml
@@ -26,5 +26,5 @@ jobs:
 #    - name: Install ESLint
 #      run: sudo npm install -g eslint
     - name: Running ESLint
-      run: npm run eslint . --config .github/.eslintrc.yml --ext .js
+      run: npx eslint . --config .github/.eslintrc.yml --ext .js
       # --output-file style\wrongstyle.html --format html
