Updated configuration file of GitHub Action - Run ESLint to ckeck javascript files

--- a/.github/.eslintrc.yml
+++ b/.github/.eslintrc.yml
@@ -9,6 +9,8 @@ env:
 #  p5js/p5: true
 extends:
   - 'eslint:recommended'
+  - 'p5js'
+  - 'p5js/sound'
 #  - 'plugin:jsdoc/recommended'
 parserOptions:
   sourceType: module
