Updated configuration file of GitHub Action - Added ESLint plugin p5js

--- a/.github/.eslintrc.yml
+++ b/.github/.eslintrc.yml
@@ -39,3 +39,14 @@ rules:
     - warn
 ignorePatterns:
   - "/static/service-worker.js"
+globals:
+  preload: true
+  setup: true
+  draw: true
+  arrow: true
+  arrowArc: true
+  drawGridPoints: true
+  drawAxes: true
+  drawMathAxes: true
+  drawGrid: true
+  
