--- a/.github/.eslintrc.yml
+++ b/.github/.eslintrc.yml
@@ -39,4 +39,11 @@ rules:
     - warn
 ignorePatterns:
   - "/static/service-worker.js"
-
+globals:
+  arrow: true
+  arrowArc: true
+  drawGridPoints: true
+  drawAxes: true
+  drawMathAxes: true
+  drawGrid:
+  
