--- a/.github/workflows/eslint-action.yml
+++ b/.github/workflows/eslint-action.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Creating the NPM project
       run: npm init --yes # (project.json created extracting info from current dir)
     - name: Install ESLint (and plugins) as project dependency
-      run: npm install --save-dev eslint eslint-config-p5js eslint-plugin-jsdoc
+      run: npm install --save-dev eslint eslint-plugin-p5js eslint-plugin-jsdoc
     - name: Running ESLint
       run: npx eslint . --config .github/.eslintrc.yml --ext .js --ignore-pattern 'static/static/js'
       # --output-file style\wrongstyle.html --format html
