--- a/config/mainroad/config.toml
+++ b/config/mainroad/config.toml
@@ -9,6 +9,8 @@ customCSS = ["/static/css/customImages.css"]
 [Params]
   pager = true # Show pager navigation (prev/next links) at the bottom of pages if true
   dateformat = "02-01-2006" # Change the format of dates to day-month-year
+  post_meta = ["date", "categories", "reading_time", "translations"] # Order of post meta information
+
 
 [Params.sidebar]
   home = "right" # Configure layout for home page
