--- a/config/mainroad/hugo.toml
+++ b/config/mainroad/hugo.toml
@@ -8,7 +8,7 @@ layoutDir = "layouts/mainroad"
   pager = true # Show pager navigation (prev/next links) at the bottom of pages if true
   dateformat = "02-01-2006" # Change the format of dates to day-month-year
   post_meta = ["date", "categories", "reading_time", "translations"] # Order of post meta information
-  customCSS = ["/static/css/customImages.css"]
+  customCSS = ["/static/css/customTypography.css"] # Add "/static/css/customImages.css"
 
 [Params.sidebar]
   home = "right" # Configure layout for home page
