--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -5,7 +5,6 @@ paginate = "20"
 
 theme = "mainroad" # hugo-academic mainroad watercss
 
-
 [params]
   author = "codingepaduli"
   subtitle = "Ennesimo sito/blog di programmazione ed informatica in generale"
@@ -26,15 +25,17 @@ theme = "mainroad" # hugo-academic mainroad watercss
 
 [markup]
   [markup.tableOfContents]
-    endLevel = 4
-    ordered = false
-    startLevel = 2
+    endLevel = 4            # The heading level to end render the table of contents
+    ordered = false         # ordered or unordered list
+    startLevel = 2          # The heading level to start render the table of contents
   [markup.goldmark]
     [markup.goldmark.renderer]
-      hardWraps = false
-      unsafe = true
-      xHTML = false
+      hardWraps = false     # render \n as <br> elements
+      unsafe = true         # render HTML code
+      xHTML = false         # render as XHTML
     [markup.highlight]
-      codeFences = true
-      guessSyntax = false
-      tabWidth = 4
+      codeFences = true     # enable code fences ```
+      guessSyntax = false   # guess language syntax
+      tabWidth = 2          # tab width
+      lineNos = false       # line number
+      style = 'igor'        # highlight style
