--- a/config/mainroad/hugo.toml
+++ b/config/mainroad/hugo.toml
@@ -9,6 +9,7 @@ layoutDir = "layouts/mainroad"
   dateformat = "02-01-2006" # Change the format of dates to day-month-year
   post_meta = ["date", "categories", "reading_time", "translations"] # Order of post meta information
   customCSS = ["/static/css/customTypography.css"] # Add "/static/css/customImages.css"
+  snow = true   # https://github.com/pajasevi/CSSnowflakes
 
 [Params.sidebar]
   home = "right" # Configure layout for home page
