--- a/.github/workflows/markdown-lint-cli-action.yml
+++ b/.github/workflows/markdown-lint-cli-action.yml
@@ -15,8 +15,12 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@master
+      # See https://github.com/DavidAnson/markdownlint
+      # See https://github.com/DavidAnson/markdownlint-cli2
+      # See https://github.com/marketplace/actions/markdownlint-cli2-action
+      # See https://github.com/OnkarRuikar/markdownlint-rule-search-replace for removing non breaking spaces (&nbsp)
     - name: Run markdownlint-cli
-      uses: nosborn/github-action-markdown-cli@v1.1.1
+      uses: nosborn/github-action-markdown-cli@v3.3.0
       with:
         files: .
         config_file: ".markdownlint.yml"
